--- a/.github/workflows/podcast.yml
+++ b/.github/workflows/podcast.yml
@@ -1,33 +1,37 @@
 name: Build & Publish Daily Podcast
 
 on:
-  workflow_dispatch: {}
+  workflow_dispatch: {}                 # manual trigger
   schedule:
-    - cron: "0 12 * * *"   # daily at 12:00 UTC
+    - cron: "0 12 * * *"                # daily at 12:00 UTC (change as you like)
 
 permissions:
-  contents: write
-  pages: write
-  id-token: write
+  contents: write                       # needed for creating releases
+  pages: write                          # needed for GitHub Pages deploy
+  id-token: write                       # needed for Pages OIDC
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
+      # 1) Checkout source
       - name: Checkout
         uses: actions/checkout@v4
 
+      # 2) Python
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: "3.11"
 
+      # 3) System deps
       - name: Install system deps
         run: |
           sudo apt-get update
           sudo apt-get install -y ffmpeg espeak-ng
 
+      # 4) Cache pip
       - name: Cache pip
         uses: actions/cache@v4
         with:
@@ -36,12 +40,15 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-pip-
 
+      # 5) Python deps (your reqs + piper + lxml_html_clean for readability)
       - name: Install Python deps
         run: |
           python -m pip install --upgrade pip
           python -m pip install -r requirements.txt
           python -m pip install piper-tts
+          python -m pip install lxml_html_clean
 
+      # 6) Download Piper voice (male, medium)
       - name: Download Piper voice (en_US-hfc_male-medium)
         run: |
           mkdir -p voices
@@ -49,16 +56,27 @@ jobs:
           echo "PIPER_VOICE=$PWD/voices/en_US-hfc_male-medium.onnx" >> $GITHUB_ENV
           echo "PIPER_BIN=$(which piper)" >> $GITHUB_ENV
 
-      - name: Build podcast (script + audio + notes.html)
+      # 7) Build podcast (script + TTS + notes.html)
+      - name: Build Podcast
         env:
+          # Gmail auth
           GMAIL_CLIENT_ID:     ${{ secrets.GMAIL_CLIENT_ID }}
           GMAIL_CLIENT_SECRET: ${{ secrets.GMAIL_CLIENT_SECRET }}
           GMAIL_REFRESH_TOKEN: ${{ secrets.GMAIL_REFRESH_TOKEN }}
-          GMAIL_LABEL:         ${{ secrets.GMAIL_LABEL }}
-          PODCAST_TITLE:       ${{ secrets.PODCAST_TITLE }}
-          PODCAST_LANG:        ${{ secrets.PODCAST_LANG }}
-          GEMINI_API_KEY:      ${{ secrets.GEMINI_API_KEY }}
+          GMAIL_LABEL:         ${{ secrets.GMAIL_LABEL }}   # e.g., Fintech
+
+          # Podcast metadata (optional but recommended)
+          PODCAST_TITLE:       ${{ secrets.PODCAST_TITLE }} # e.g., Fintech Daily Briefing
+          PODCAST_LANG:        ${{ secrets.PODCAST_LANG }}  # e.g., en-US
+          PODCAST_COVER_URL:   ${{ secrets.PODCAST_COVER_URL }}
+          PODCAST_OWNER_NAME:  ${{ secrets.PODCAST_OWNER_NAME }}
+          PODCAST_OWNER_EMAIL: ${{ secrets.PODCAST_OWNER_EMAIL }}
+          PODCAST_AUTHOR:      ${{ secrets.PODCAST_AUTHOR }}
+          PODCAST_CATEGORY:    ${{ secrets.PODCAST_CATEGORY }}
           HOST_PUBLIC_BASE:    ${{ secrets.HOST_PUBLIC_BASE }}
+
+          # Gemini (optional; safe if unset — your code falls back)
+          GEMINI_API_KEY:      ${{ secrets.GEMINI_API_KEY }}
         run: |
           mkdir -p output
           PYTHONPATH=. python src/main.py \
@@ -70,14 +88,14 @@ jobs:
             --pause_ms 1400 \
             --extra_pause_after_open_ms 600
 
-      - name: Upload outputs (artifact)
+      # 8) Upload build outputs (handy for debugging / downloads)
+      - name: Upload outputs
         uses: actions/upload-artifact@v4
         with:
           name: podcast-output
           path: output/
 
-      # --- Publish & feed ---
-
+      # 9) Create GitHub Release with the MP3
       - name: Create GitHub Release with MP3
         id: release
         uses: softprops/action-gh-release@v1
@@ -87,7 +105,8 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Update RSS feed (title = 'Month Day Year'; description = notes.html)
+      # 10) Update RSS feed (title = "Month Day Year", description = notes.html)
+      - name: Update RSS feed
         env:
           GITHUB_REPOSITORY:   ${{ github.repository }}
           PODCAST_TITLE:       ${{ secrets.PODCAST_TITLE }}
@@ -100,7 +119,8 @@ jobs:
         run: |
           python -m src.feed --update --tag "episode-${{ github.run_id }}"
 
-      - name: Prepare feed.xml for Pages
+      # 11) Publish feed.xml to GitHub Pages
+      - name: Prepare feed for Pages
         run: |
           mkdir -p public
           cp feed.xml public/
