append feed.xml

--- a/.github/workflows/podcast.yml
+++ b/.github/workflows/podcast.yml
@@ -98,7 +98,19 @@ jobs:
           files: output/episode.mp3
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
+          
+      # 9.5) Restore previous feed from GitHub Pages (so we append, not overwrite)
+      - name: Restore previous feed.xml
+        run: |
+          set -euo pipefail
+          FEED_URL="https://${{ github.repository_owner }}.github.io/${{ github.event.repository.name }}/feed.xml"
+          echo "Restoring feed from: $FEED_URL"
+          if curl -fsSL "$FEED_URL" -o feed.xml; then
+            echo "Restored existing feed.xml"
+          else
+            echo "No existing feed found. Starting fresh."
+            : > feed.xml
+          fi
       # 10) Update RSS feed (title = "Month Day Year", description = notes.html)
       - name: Update RSS feed
         env:
